# vischeck

./: .gitignore  .gitleaks.toml  .jscpd.json  CLAUDE.md  LICENSE  README.md  hk.pkl  install.sh  mise.toml  pyproject.toml  screenshot  screenshot-reminder.sh  settings-snippet.json  skill.md
.claude-plugin/: plugin.json
.github/workflows/: ci.yml
hooks/: hooks.json  screenshot-reminder.sh
scripts/: run-jscpd.sh
skills/setup-auth/: SKILL.md
skills/verify/: SKILL.md
tests/: TESTS_TODO.md  test_exec_bits.py  test_screenshot.py  test_screenshots.py  test_vischeck_hook.py
